Add Cucumber Test Runners and Hooks

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     // Cucumber
     testImplementation 'io.cucumber:cucumber-java:7.14.0'
     testImplementation 'io.cucumber:cucumber-junit:7.14.0'
+    testImplementation 'junit:junit:4.13.2'
 
     // Selenium WebDriver
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.10.0'
