--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ on:
       - main
   workflow_dispatch:  # Untuk manual trigger
 
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -37,15 +36,17 @@ jobs:
       - name: Grant execute permission for Gradle
         run: chmod +x gradlew
 
+      # Menjalankan API tests
       - name: Run API tests
         run: ./gradlew testApi
 
+      # Menjalankan Web UI tests
       - name: Run Web UI tests
         run: ./gradlew testWeb
 
+      # Upload test reports as artifacts
       - name: Upload Test Reports
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: build/reports/tests
-
