--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.qameta.allure' version '2.11.2' // Untuk report Allure
+    id 'com.github.ben-manes.versions' version '0.46.0'
 }
 
 repositories {
@@ -18,75 +19,88 @@ dependencies {
     testImplementation 'org.junit.vintage:junit-vintage-engine:5.10.0'
 
     // ✅ Selenium WebDriver
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.14.0'
     testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.19.1'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0'
 
     // ✅ WebDriverManager (Fix WebDriver Error)
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
+    dependencies {
+        testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
 
-    // ✅ Rest Assured (API Testing)
-    testImplementation 'io.rest-assured:rest-assured:5.3.0'
+        // Cek apakah ada versi terbaru yang mengatasi CVE ini
 
-    // ✅ JSON Parser
-    testImplementation 'com.google.code.gson:gson:2.10.1'
 
-    // ✅ Assertions
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-    testImplementation 'org.assertj:assertj-core:3.24.2'
+        // ✅ Rest Assured (API Testing)
+        testImplementation 'io.rest-assured:rest-assured:5.4.0' // Cek versi terbaru dari Rest Assured
+        testImplementation 'commons-codec:commons-codec:1.15'  // Versi terbaru yang aman
 
-    // ✅ Cucumber Reporting
-    testImplementation 'net.masterthought:cucumber-reporting:5.7.4'
 
-    // ✅ Allure Report
-    testImplementation 'io.qameta.allure:allure-cucumber7-jvm:2.24.0'
-    testImplementation 'io.qameta.allure:allure-junit5:2.24.0'
-}
+        // ✅ JSON Parser
+        testImplementation 'com.google.code.gson:gson:2.10.1'
 
-tasks.withType(Test) {
-    useJUnitPlatform()
-}
+        // ✅ Assertions
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+        testImplementation 'org.assertj:assertj-core:3.24.2'
 
-tasks.register('testApi', Test) {
-    useJUnitPlatform()
-    systemProperty 'cucumber.filter.tags', '@api'  // Menggunakan tag @api untuk API tests
-    testLogging {
-        events "started", "passed", "failed"
-    }
-}
+        // ✅ Cucumber Reporting
+        testImplementation 'net.masterthought:cucumber-reporting:5.7.4'
 
-tasks.register('testWeb', Test) {
-    useJUnitPlatform()
-    systemProperty 'cucumber.filter.tags', '@web'  // Menggunakan tag @web untuk Web UI tests
-    testLogging {
-        events "started", "passed", "failed"
-    }
-}
-
-tasks.test {
-    useJUnitPlatform()
-
-    // Konfigurasi laporan XML dan HTML
-    reports {
-        junitXml.required.set(true)  // Mengaktifkan laporan XML
-        junitXml.destination = file("${buildDir}/reports/tests/test")  // Menentukan lokasi laporan XML
-
-        html.required.set(true)  // Mengaktifkan laporan HTML
-        html.destination = file("${buildDir}/reports/tests/test")  // Menentukan lokasi laporan HTML
+        // ✅ Allure Report
+        testImplementation 'io.qameta.allure:allure-cucumber7-jvm:2.24.0'
+        testImplementation 'io.qameta.allure:allure-junit5:2.24.0'
     }
 
-    testLogging {
-        events "started", "passed", "failed"  // Mencatat event tes yang dijalankan
+    tasks.withType(Test) {
+        useJUnitPlatform()
     }
-}
 
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
+    tasks.register('testApi', Test) {
+        useJUnitPlatform()
+        systemProperty 'cucumber.filter.tags', '@api'  // Menggunakan tag @api untuk API tests
+        testLogging {
+            events "started", "passed", "failed"
+        }
     }
-}
 
-allure {
-    version = '2.24.0'
-    autoconfigure = true
-    aspectjweaver = true
+    tasks.register('testWeb', Test) {
+        useJUnitPlatform()
+        systemProperty 'cucumber.filter.tags', '@web'  // Menggunakan tag @web untuk Web UI tests
+        testLogging {
+            events "started", "passed", "failed"
+        }
+    }
+
+    tasks.test {
+        useJUnitPlatform()
+
+        // Konfigurasi laporan XML dan HTML
+        reports {
+            junitXml.required.set(true)  // Mengaktifkan laporan XML
+            junitXml.destination = file("${buildDir}/reports/tests/test")  // Menentukan lokasi laporan XML
+
+            html.required.set(true)  // Mengaktifkan laporan HTML
+            html.destination = file("${buildDir}/reports/tests/test")  // Menentukan lokasi laporan HTML
+        }
+
+        testLogging {
+            events "started", "passed", "failed"  // Mencatat event tes yang dijalankan
+        }
+    }
+
+    java {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(17))
+        }
+    }
+
+    allure {
+        version = '2.24.0'
+        autoconfigure = true
+        aspectjweaver = true
+    }
+
+    dependencyLocking {
+        lockAllConfigurations()
+    }
+
 }
