--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     // ✅ Cucumber (Gherkin-Based Testing)
     testImplementation 'io.cucumber:cucumber-java:7.14.0'
     testImplementation 'io.cucumber:cucumber-junit:7.14.0'
+    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.14.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.vintage:junit-vintage-engine:5.10.0'
 
@@ -43,19 +44,13 @@ dependencies {
     testImplementation 'io.qameta.allure:allure-junit5:2.24.0'
 }
 
-tasks.withType(Test) {
-    useJUnitPlatform()
-    testLogging {
-        events "started", "passed", "failed"
-    }
-}
-
 tasks.register('testApi', Test) {
-    useJUnitPlatform()
+    useJUnit()
     systemProperty 'cucumber.filter.tags', '@api'
     testLogging {
         events "started", "passed", "failed"
     }
+    include '**/ApiTestRunner.class'
 }
 
 tasks.register('testWeb', Test) {
@@ -64,6 +59,16 @@ tasks.register('testWeb', Test) {
     testLogging {
         events "started", "passed", "failed"
     }
+    include '**/WebTestRunner.class'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+    systemProperty 'cucumber.plugin', 'json:build/reports/cucumber/cucumber-test.json, html:build/reports/cucumber/cucumber-test.html'
+    testLogging {
+        events "started", "passed", "failed"
+    }
+    dependsOn testApi, testWeb
 }
 
 java {
