--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
 tasks.register('testApi', Test) {
     useJUnit()
+    systemProperty 'cucumber.plugin', 'pretty, json:build/reports/cucumber/testapi/api.json, html:build/reports/cucumber/testapi/cucumber-api.html'
     systemProperty 'cucumber.filter.tags', '@api'
     testLogging {
         events "started", "passed", "failed"
@@ -55,6 +56,7 @@ tasks.register('testApi', Test) {
 
 tasks.register('testWeb', Test) {
     useJUnitPlatform()
+    systemProperty 'cucumber.plugin', 'json:build/reports/cucumber/testweb/cucumber-web.json, html:build/reports/cucumber/testweb/cucumber-web.html'
     systemProperty 'cucumber.filter.tags', '@web'
     testLogging {
         events "started", "passed", "failed"
